syntax = "proto3";

package chart_data;

import "google/protobuf/timestamp.proto";

service ChartService {
  rpc VN30PS (VN30PSRequest) returns (VN30PSResponse) {}
  rpc FBFS (FBFSRequest) returns (FBFSResponse) {}
  rpc RollingBUSD (RollingBUSDRequest) returns (RollingBUSDResponse) {}
}

// VN30PS

message VN30PSRequest {
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

message VN30PSDataPoint {
  google.protobuf.Timestamp timestamp = 1;
  double smoothed_last = 2;
}

message VN30PSResponse {
  repeated VN30PSDataPoint vn30 = 1;
  repeated VN30PSDataPoint ps = 2;
}

// FBFS

message FBFSRequest {
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

message FBFSDataPoint {
  google.protobuf.Timestamp timestamp = 1;
  int64 volume = 2;
}

message FBFSResponse {
  repeated FBFSDataPoint fb = 1;
  repeated FBFSDataPoint fs = 2;
}

// RollingBUSD
message RollingBUSDRequest {
  repeated string code_list = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  int32 rolling_period = 4;
}

message RollingBUSDDataPoint {
  google.protobuf.Timestamp timestamp = 1;
  double buy_up = 2;
  double sell_down = 3;
}

message RollingBUSDResponse {
  repeated RollingBUSDDataPoint busd = 1;
}